--- a/web.html
+++ b/web.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Embedded Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+<style>
+    * {
+        padding: 0px;
+        margin: 0px;
+    }
+</style>
+<iframe src="https://mkvin.com/" frameborder="0" width="100vh" height="100vh"></iframe>
 <body>
-    <iframe src="https://mkvin.com/" width="100%" height="100%" frameborder="0"></iframe>
+
 </body>
+
 </html>
