--- a/web.html
+++ b/web.html
@@ -11,6 +11,11 @@
         padding: 0px;
         margin: 0px;
     }
+iframe {
+    width: 100vh !important;
+    height: 100vh !important;
+}
+        
 </style>
 <iframe src="https://mkvin.com/" frameborder="0" width="100vh" height="100vh"></iframe>
 <body>
