--- a/web.html
+++ b/web.html
@@ -12,7 +12,7 @@
         margin: 0px;
     }
 iframe {
-    width: 100vh !important;
+    width: 100vw !important;
     height: 100vh !important;
 }
         
